@@ -1,7 +1,7 @@
-#include "constraint/CIrrBPConeTwistConstraint.h"
+#include "constraint/CIrrBP6DOFConstraint.h"
 #include "body/CIrrBPRigidBody.h"
 
-CIrrBPConeTwistConstraint::CIrrBPConeTwistConstraint(CIrrBPRigidBody * bodyA,CIrrBPRigidBody * bodyB,const vector3df & pivotInA,const vector3df & pivotInB)
+CIrrBP6DOFConstraint::CIrrBP6DOFConstraint(CIrrBPRigidBody * bodyA,CIrrBPRigidBody * bodyB,const vector3df & pivotInA,const vector3df & pivotInB)
 {
 	/*Setting object's members...*/
 	this->m_bodyA = bodyA;
@@ -18,26 +18,22 @@ CIrrBPConeTwistConstraint::CIrrBPConeTwistConstraint(CIrrBPRigidBody * bodyA,CIr
 	//Set origins...
 	transf1.setOrigin(irrVectorToBulletVector(pivotInA));
 	transf2.setOrigin(irrVectorToBulletVector(pivotInB));
-
-
-	m_fixedConstraint = new btConeTwistConstraint(*bodyA->getBodyPtr(),*bodyB->getBodyPtr(),transf1,transf2);
+	
+	m_fixedConstraint = new btGeneric6DofConstraint(*bodyA->getBodyPtr(),*bodyB->getBodyPtr(),transf1,transf2,true);
 	m_Constraint = m_fixedConstraint;
+
 }
-CIrrBPConeTwistConstraint::CIrrBPConeTwistConstraint(CIrrBPRigidBody * bodyA,const vector3df & pivotInA)
+CIrrBP6DOFConstraint::CIrrBP6DOFConstraint(CIrrBPRigidBody * bodyA,const vector3df & pivotInA)
 {
-	/*Setting object's members...*/
 	this->m_bodyA = bodyA;
 	this->m_pivotA = pivotInA;
-	
-	//Body Transformation
+
 	btTransform transf1;
 
 	transf1 = transf1.getIdentity();
-
-	//Set origins...
 	transf1.setOrigin(irrVectorToBulletVector(pivotInA));
 
-
-	m_fixedConstraint = new btConeTwistConstraint(*bodyA->getBodyPtr(),transf1);
+	m_fixedConstraint = new btGeneric6DofConstraint(*bodyA->getBodyPtr(),transf1,true);
 	m_Constraint = m_fixedConstraint;
+
 }
